// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders dynamo db table global secondary indexes 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_dynamodb_table\\": {
      \\"testDynamoDBTable_dynamodb_table_A3DD49A4\\": {
        \\"hash_key\\": \\"123\\",
        \\"name\\": \\"abides-\\",
        \\"tags\\": {
          \\"name\\": \\"thedude\\",
          \\"hobby\\": \\"bowling\\"
        },
        \\"attribute\\": [
          {
            \\"name\\": \\"attribeautiful\\",
            \\"type\\": \\"shrugs!\\"
          }
        ],
        \\"global_secondary_index\\": [
          {
            \\"hash_key\\": \\"card-type\\",
            \\"name\\": \\"card-index\\",
            \\"projection_type\\": \\"ALL\\",
            \\"range_key\\": \\"home_on_the_range\\",
            \\"read_capacity\\": 5,
            \\"write_capacity\\": 5
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/dynamodb_table\\",
            \\"uniqueId\\": \\"testDynamoDBTable_dynamodb_table_A3DD49A4\\"
          }
        }
      }
    },
    \\"aws_iam_policy\\": {
      \\"testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649\\": {
        \\"name\\": \\"abides--ReadCapacity-AutoScalingPolicy\\",
        \\"policy\\": \\"\${data.aws_iam_policy_document.testDynamoDBTable_ReadCapacity_policy_document_EF789C68.json}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_autoscaling_policy\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649\\"
          }
        }
      },
      \\"testDynamoDBTable_WriteCapacity_autoscaling_policy_9632CE60\\": {
        \\"name\\": \\"abides--WriteCapacity-AutoScalingPolicy\\",
        \\"policy\\": \\"\${data.aws_iam_policy_document.testDynamoDBTable_WriteCapacity_policy_document_9032D023.json}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/WriteCapacity_autoscaling_policy\\",
            \\"uniqueId\\": \\"testDynamoDBTable_WriteCapacity_autoscaling_policy_9632CE60\\"
          }
        }
      }
    },
    \\"aws_iam_role\\": {
      \\"testDynamoDBTable_ReadCapacity_role_2B9645BB\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.testDynamoDBTable_ReadCapacity_assume_role_policy_document_54F698F0.json}\\",
        \\"name\\": \\"abides--ReadCapacity-AutoScalingRole\\",
        \\"tags\\": {
          \\"name\\": \\"thedude\\",
          \\"hobby\\": \\"bowling\\"
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_role\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_role_2B9645BB\\"
          }
        }
      },
      \\"testDynamoDBTable_WriteCapacity_role_4BB8E3F1\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.testDynamoDBTable_WriteCapacity_assume_role_policy_document_5A7EA325.json}\\",
        \\"name\\": \\"abides--WriteCapacity-AutoScalingRole\\",
        \\"tags\\": {
          \\"name\\": \\"thedude\\",
          \\"hobby\\": \\"bowling\\"
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/WriteCapacity_role\\",
            \\"uniqueId\\": \\"testDynamoDBTable_WriteCapacity_role_4BB8E3F1\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"testDynamoDBTable_ReadCapacity_role_attachment_3C0829C2\\": {
        \\"policy_arn\\": \\"\${aws_iam_policy.testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649.arn}\\",
        \\"role\\": \\"\${aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB.name}\\",
        \\"depends_on\\": [
          \\"aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB\\",
          \\"aws_iam_policy.testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_role_attachment\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_role_attachment_3C0829C2\\"
          }
        }
      },
      \\"testDynamoDBTable_WriteCapacity_role_attachment_8ABB9833\\": {
        \\"policy_arn\\": \\"\${aws_iam_policy.testDynamoDBTable_WriteCapacity_autoscaling_policy_9632CE60.arn}\\",
        \\"role\\": \\"\${aws_iam_role.testDynamoDBTable_WriteCapacity_role_4BB8E3F1.name}\\",
        \\"depends_on\\": [
          \\"aws_iam_role.testDynamoDBTable_WriteCapacity_role_4BB8E3F1\\",
          \\"aws_iam_policy.testDynamoDBTable_WriteCapacity_autoscaling_policy_9632CE60\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/WriteCapacity_role_attachment\\",
            \\"uniqueId\\": \\"testDynamoDBTable_WriteCapacity_role_attachment_8ABB9833\\"
          }
        }
      }
    },
    \\"aws_appautoscaling_target\\": {
      \\"testDynamoDBTable_ReadCapacity_table_target_CD047ED1\\": {
        \\"max_capacity\\": 10,
        \\"min_capacity\\": 3,
        \\"resource_id\\": \\"table/\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.name}\\",
        \\"role_arn\\": \\"\${aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB.arn}\\",
        \\"scalable_dimension\\": \\"dynamodb:table:ReadCapacityUnits\\",
        \\"service_namespace\\": \\"dynamodb\\",
        \\"depends_on\\": [
          \\"aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_table_target\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_table_target_CD047ED1\\"
          }
        }
      },
      \\"testDynamoDBTable_ReadCapacity_index_target_7D04C4D2\\": {
        \\"max_capacity\\": 10,
        \\"min_capacity\\": 5,
        \\"resource_id\\": \\"table/\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.name}/index/card-index\\",
        \\"role_arn\\": \\"\${aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB.arn}\\",
        \\"scalable_dimension\\": \\"dynamodb:index:ReadCapacityUnits\\",
        \\"service_namespace\\": \\"dynamodb\\",
        \\"depends_on\\": [
          \\"aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_index_target\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_index_target_7D04C4D2\\"
          }
        }
      },
      \\"testDynamoDBTable_WriteCapacity_table_target_78393F1E\\": {
        \\"max_capacity\\": 10,
        \\"min_capacity\\": 3,
        \\"resource_id\\": \\"table/\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.name}\\",
        \\"role_arn\\": \\"\${aws_iam_role.testDynamoDBTable_WriteCapacity_role_4BB8E3F1.arn}\\",
        \\"scalable_dimension\\": \\"dynamodb:table:WriteCapacityUnits\\",
        \\"service_namespace\\": \\"dynamodb\\",
        \\"depends_on\\": [
          \\"aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/WriteCapacity_table_target\\",
            \\"uniqueId\\": \\"testDynamoDBTable_WriteCapacity_table_target_78393F1E\\"
          }
        }
      },
      \\"testDynamoDBTable_WriteCapacity_index_target_0024C83F\\": {
        \\"max_capacity\\": 10,
        \\"min_capacity\\": 5,
        \\"resource_id\\": \\"table/\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.name}/index/card-index\\",
        \\"role_arn\\": \\"\${aws_iam_role.testDynamoDBTable_WriteCapacity_role_4BB8E3F1.arn}\\",
        \\"scalable_dimension\\": \\"dynamodb:index:WriteCapacityUnits\\",
        \\"service_namespace\\": \\"dynamodb\\",
        \\"depends_on\\": [
          \\"aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/WriteCapacity_index_target\\",
            \\"uniqueId\\": \\"testDynamoDBTable_WriteCapacity_index_target_0024C83F\\"
          }
        }
      }
    },
    \\"aws_appautoscaling_policy\\": {
      \\"testDynamoDBTable_ReadCapacity_table_policy_40FF65C0\\": {
        \\"name\\": \\"DynamoDBReadCapacityUtilization:\${aws_appautoscaling_target.testDynamoDBTable_ReadCapacity_table_target_CD047ED1.resource_id}\\",
        \\"policy_type\\": \\"TargetTrackingScaling\\",
        \\"resource_id\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_ReadCapacity_table_target_CD047ED1.resource_id}\\",
        \\"scalable_dimension\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_ReadCapacity_table_target_CD047ED1.scalable_dimension}\\",
        \\"service_namespace\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_ReadCapacity_table_target_CD047ED1.service_namespace}\\",
        \\"target_tracking_scaling_policy_configuration\\": [
          {
            \\"target_value\\": 1,
            \\"predefined_metric_specification\\": [
              {
                \\"predefined_metric_type\\": \\"DynamoDBReadCapacityUtilization\\"
              }
            ]
          }
        ],
        \\"depends_on\\": [
          \\"aws_appautoscaling_target.testDynamoDBTable_ReadCapacity_table_target_CD047ED1\\",
          \\"aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_table_policy\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_table_policy_40FF65C0\\"
          }
        }
      },
      \\"testDynamoDBTable_ReadCapacity_index_policy_7812D8A1\\": {
        \\"name\\": \\"DynamoDBReadCapacityUtilization:\${aws_appautoscaling_target.testDynamoDBTable_ReadCapacity_index_target_7D04C4D2.resource_id}\\",
        \\"policy_type\\": \\"TargetTrackingScaling\\",
        \\"resource_id\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_ReadCapacity_index_target_7D04C4D2.resource_id}\\",
        \\"scalable_dimension\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_ReadCapacity_index_target_7D04C4D2.scalable_dimension}\\",
        \\"service_namespace\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_ReadCapacity_index_target_7D04C4D2.service_namespace}\\",
        \\"target_tracking_scaling_policy_configuration\\": [
          {
            \\"target_value\\": 1,
            \\"predefined_metric_specification\\": [
              {
                \\"predefined_metric_type\\": \\"DynamoDBReadCapacityUtilization\\"
              }
            ]
          }
        ],
        \\"depends_on\\": [
          \\"aws_appautoscaling_target.testDynamoDBTable_ReadCapacity_index_target_7D04C4D2\\",
          \\"aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_index_policy\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_index_policy_7812D8A1\\"
          }
        }
      },
      \\"testDynamoDBTable_WriteCapacity_table_policy_9BA11FD4\\": {
        \\"name\\": \\"DynamoDBWriteCapacityUtilization:\${aws_appautoscaling_target.testDynamoDBTable_WriteCapacity_table_target_78393F1E.resource_id}\\",
        \\"policy_type\\": \\"TargetTrackingScaling\\",
        \\"resource_id\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_WriteCapacity_table_target_78393F1E.resource_id}\\",
        \\"scalable_dimension\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_WriteCapacity_table_target_78393F1E.scalable_dimension}\\",
        \\"service_namespace\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_WriteCapacity_table_target_78393F1E.service_namespace}\\",
        \\"target_tracking_scaling_policy_configuration\\": [
          {
            \\"target_value\\": 1,
            \\"predefined_metric_specification\\": [
              {
                \\"predefined_metric_type\\": \\"DynamoDBWriteCapacityUtilization\\"
              }
            ]
          }
        ],
        \\"depends_on\\": [
          \\"aws_appautoscaling_target.testDynamoDBTable_WriteCapacity_table_target_78393F1E\\",
          \\"aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/WriteCapacity_table_policy\\",
            \\"uniqueId\\": \\"testDynamoDBTable_WriteCapacity_table_policy_9BA11FD4\\"
          }
        }
      },
      \\"testDynamoDBTable_WriteCapacity_index_policy_1159C70C\\": {
        \\"name\\": \\"DynamoDBWriteCapacityUtilization:\${aws_appautoscaling_target.testDynamoDBTable_WriteCapacity_index_target_0024C83F.resource_id}\\",
        \\"policy_type\\": \\"TargetTrackingScaling\\",
        \\"resource_id\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_WriteCapacity_index_target_0024C83F.resource_id}\\",
        \\"scalable_dimension\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_WriteCapacity_index_target_0024C83F.scalable_dimension}\\",
        \\"service_namespace\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_WriteCapacity_index_target_0024C83F.service_namespace}\\",
        \\"target_tracking_scaling_policy_configuration\\": [
          {
            \\"target_value\\": 1,
            \\"predefined_metric_specification\\": [
              {
                \\"predefined_metric_type\\": \\"DynamoDBWriteCapacityUtilization\\"
              }
            ]
          }
        ],
        \\"depends_on\\": [
          \\"aws_appautoscaling_target.testDynamoDBTable_WriteCapacity_index_target_0024C83F\\",
          \\"aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/WriteCapacity_index_policy\\",
            \\"uniqueId\\": \\"testDynamoDBTable_WriteCapacity_index_policy_1159C70C\\"
          }
        }
      }
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"testDynamoDBTable_ReadCapacity_policy_document_EF789C68\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"application-autoscaling:*\\",
              \\"cloudwatch:DescribeAlarms\\",
              \\"cloudwatch:PutMetricAlarm\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"*\\"
            ]
          },
          {
            \\"actions\\": [
              \\"dynamodb:DescribeTable\\",
              \\"dynamodb:UpdateTable\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}\\",
              \\"\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}*\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_policy_document\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_policy_document_EF789C68\\"
          }
        }
      },
      \\"testDynamoDBTable_ReadCapacity_assume_role_policy_document_54F698F0\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"application-autoscaling.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_assume_role_policy_document\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_assume_role_policy_document_54F698F0\\"
          }
        }
      },
      \\"testDynamoDBTable_WriteCapacity_policy_document_9032D023\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"application-autoscaling:*\\",
              \\"cloudwatch:DescribeAlarms\\",
              \\"cloudwatch:PutMetricAlarm\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"*\\"
            ]
          },
          {
            \\"actions\\": [
              \\"dynamodb:DescribeTable\\",
              \\"dynamodb:UpdateTable\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}\\",
              \\"\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}*\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/WriteCapacity_policy_document\\",
            \\"uniqueId\\": \\"testDynamoDBTable_WriteCapacity_policy_document_9032D023\\"
          }
        }
      },
      \\"testDynamoDBTable_WriteCapacity_assume_role_policy_document_5A7EA325\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"application-autoscaling.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/WriteCapacity_assume_role_policy_document\\",
            \\"uniqueId\\": \\"testDynamoDBTable_WriteCapacity_assume_role_policy_document_5A7EA325\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders dynamo db table with minimal config 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_dynamodb_table\\": {
      \\"testDynamoDBTable_dynamodb_table_A3DD49A4\\": {
        \\"hash_key\\": \\"123\\",
        \\"name\\": \\"abides-\\",
        \\"attribute\\": [
          {
            \\"name\\": \\"attribeautiful\\",
            \\"type\\": \\"shrugs!\\"
          }
        ],
        \\"global_secondary_index\\": [],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/dynamodb_table\\",
            \\"uniqueId\\": \\"testDynamoDBTable_dynamodb_table_A3DD49A4\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders dynamo db table with read and write capacity 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_dynamodb_table\\": {
      \\"testDynamoDBTable_dynamodb_table_A3DD49A4\\": {
        \\"hash_key\\": \\"123\\",
        \\"name\\": \\"abides-\\",
        \\"attribute\\": [
          {
            \\"name\\": \\"attribeautiful\\",
            \\"type\\": \\"shrugs!\\"
          }
        ],
        \\"global_secondary_index\\": [],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/dynamodb_table\\",
            \\"uniqueId\\": \\"testDynamoDBTable_dynamodb_table_A3DD49A4\\"
          }
        }
      }
    },
    \\"aws_iam_policy\\": {
      \\"testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649\\": {
        \\"name\\": \\"abides--ReadCapacity-AutoScalingPolicy\\",
        \\"policy\\": \\"\${data.aws_iam_policy_document.testDynamoDBTable_ReadCapacity_policy_document_EF789C68.json}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_autoscaling_policy\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649\\"
          }
        }
      },
      \\"testDynamoDBTable_WriteCapacity_autoscaling_policy_9632CE60\\": {
        \\"name\\": \\"abides--WriteCapacity-AutoScalingPolicy\\",
        \\"policy\\": \\"\${data.aws_iam_policy_document.testDynamoDBTable_WriteCapacity_policy_document_9032D023.json}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/WriteCapacity_autoscaling_policy\\",
            \\"uniqueId\\": \\"testDynamoDBTable_WriteCapacity_autoscaling_policy_9632CE60\\"
          }
        }
      }
    },
    \\"aws_iam_role\\": {
      \\"testDynamoDBTable_ReadCapacity_role_2B9645BB\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.testDynamoDBTable_ReadCapacity_assume_role_policy_document_54F698F0.json}\\",
        \\"name\\": \\"abides--ReadCapacity-AutoScalingRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_role\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_role_2B9645BB\\"
          }
        }
      },
      \\"testDynamoDBTable_WriteCapacity_role_4BB8E3F1\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.testDynamoDBTable_WriteCapacity_assume_role_policy_document_5A7EA325.json}\\",
        \\"name\\": \\"abides--WriteCapacity-AutoScalingRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/WriteCapacity_role\\",
            \\"uniqueId\\": \\"testDynamoDBTable_WriteCapacity_role_4BB8E3F1\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"testDynamoDBTable_ReadCapacity_role_attachment_3C0829C2\\": {
        \\"policy_arn\\": \\"\${aws_iam_policy.testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649.arn}\\",
        \\"role\\": \\"\${aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB.name}\\",
        \\"depends_on\\": [
          \\"aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB\\",
          \\"aws_iam_policy.testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_role_attachment\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_role_attachment_3C0829C2\\"
          }
        }
      },
      \\"testDynamoDBTable_WriteCapacity_role_attachment_8ABB9833\\": {
        \\"policy_arn\\": \\"\${aws_iam_policy.testDynamoDBTable_WriteCapacity_autoscaling_policy_9632CE60.arn}\\",
        \\"role\\": \\"\${aws_iam_role.testDynamoDBTable_WriteCapacity_role_4BB8E3F1.name}\\",
        \\"depends_on\\": [
          \\"aws_iam_role.testDynamoDBTable_WriteCapacity_role_4BB8E3F1\\",
          \\"aws_iam_policy.testDynamoDBTable_WriteCapacity_autoscaling_policy_9632CE60\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/WriteCapacity_role_attachment\\",
            \\"uniqueId\\": \\"testDynamoDBTable_WriteCapacity_role_attachment_8ABB9833\\"
          }
        }
      }
    },
    \\"aws_appautoscaling_target\\": {
      \\"testDynamoDBTable_ReadCapacity_table_target_CD047ED1\\": {
        \\"max_capacity\\": 10,
        \\"min_capacity\\": 3,
        \\"resource_id\\": \\"table/\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.name}\\",
        \\"role_arn\\": \\"\${aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB.arn}\\",
        \\"scalable_dimension\\": \\"dynamodb:table:ReadCapacityUnits\\",
        \\"service_namespace\\": \\"dynamodb\\",
        \\"depends_on\\": [
          \\"aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_table_target\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_table_target_CD047ED1\\"
          }
        }
      },
      \\"testDynamoDBTable_WriteCapacity_table_target_78393F1E\\": {
        \\"max_capacity\\": 10,
        \\"min_capacity\\": 3,
        \\"resource_id\\": \\"table/\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.name}\\",
        \\"role_arn\\": \\"\${aws_iam_role.testDynamoDBTable_WriteCapacity_role_4BB8E3F1.arn}\\",
        \\"scalable_dimension\\": \\"dynamodb:table:WriteCapacityUnits\\",
        \\"service_namespace\\": \\"dynamodb\\",
        \\"depends_on\\": [
          \\"aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/WriteCapacity_table_target\\",
            \\"uniqueId\\": \\"testDynamoDBTable_WriteCapacity_table_target_78393F1E\\"
          }
        }
      }
    },
    \\"aws_appautoscaling_policy\\": {
      \\"testDynamoDBTable_ReadCapacity_table_policy_40FF65C0\\": {
        \\"name\\": \\"DynamoDBReadCapacityUtilization:\${aws_appautoscaling_target.testDynamoDBTable_ReadCapacity_table_target_CD047ED1.resource_id}\\",
        \\"policy_type\\": \\"TargetTrackingScaling\\",
        \\"resource_id\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_ReadCapacity_table_target_CD047ED1.resource_id}\\",
        \\"scalable_dimension\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_ReadCapacity_table_target_CD047ED1.scalable_dimension}\\",
        \\"service_namespace\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_ReadCapacity_table_target_CD047ED1.service_namespace}\\",
        \\"target_tracking_scaling_policy_configuration\\": [
          {
            \\"target_value\\": 1,
            \\"predefined_metric_specification\\": [
              {
                \\"predefined_metric_type\\": \\"DynamoDBReadCapacityUtilization\\"
              }
            ]
          }
        ],
        \\"depends_on\\": [
          \\"aws_appautoscaling_target.testDynamoDBTable_ReadCapacity_table_target_CD047ED1\\",
          \\"aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_table_policy\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_table_policy_40FF65C0\\"
          }
        }
      },
      \\"testDynamoDBTable_WriteCapacity_table_policy_9BA11FD4\\": {
        \\"name\\": \\"DynamoDBWriteCapacityUtilization:\${aws_appautoscaling_target.testDynamoDBTable_WriteCapacity_table_target_78393F1E.resource_id}\\",
        \\"policy_type\\": \\"TargetTrackingScaling\\",
        \\"resource_id\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_WriteCapacity_table_target_78393F1E.resource_id}\\",
        \\"scalable_dimension\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_WriteCapacity_table_target_78393F1E.scalable_dimension}\\",
        \\"service_namespace\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_WriteCapacity_table_target_78393F1E.service_namespace}\\",
        \\"target_tracking_scaling_policy_configuration\\": [
          {
            \\"target_value\\": 1,
            \\"predefined_metric_specification\\": [
              {
                \\"predefined_metric_type\\": \\"DynamoDBWriteCapacityUtilization\\"
              }
            ]
          }
        ],
        \\"depends_on\\": [
          \\"aws_appautoscaling_target.testDynamoDBTable_WriteCapacity_table_target_78393F1E\\",
          \\"aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/WriteCapacity_table_policy\\",
            \\"uniqueId\\": \\"testDynamoDBTable_WriteCapacity_table_policy_9BA11FD4\\"
          }
        }
      }
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"testDynamoDBTable_ReadCapacity_policy_document_EF789C68\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"application-autoscaling:*\\",
              \\"cloudwatch:DescribeAlarms\\",
              \\"cloudwatch:PutMetricAlarm\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"*\\"
            ]
          },
          {
            \\"actions\\": [
              \\"dynamodb:DescribeTable\\",
              \\"dynamodb:UpdateTable\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}\\",
              \\"\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}*\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_policy_document\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_policy_document_EF789C68\\"
          }
        }
      },
      \\"testDynamoDBTable_ReadCapacity_assume_role_policy_document_54F698F0\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"application-autoscaling.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_assume_role_policy_document\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_assume_role_policy_document_54F698F0\\"
          }
        }
      },
      \\"testDynamoDBTable_WriteCapacity_policy_document_9032D023\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"application-autoscaling:*\\",
              \\"cloudwatch:DescribeAlarms\\",
              \\"cloudwatch:PutMetricAlarm\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"*\\"
            ]
          },
          {
            \\"actions\\": [
              \\"dynamodb:DescribeTable\\",
              \\"dynamodb:UpdateTable\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}\\",
              \\"\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}*\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/WriteCapacity_policy_document\\",
            \\"uniqueId\\": \\"testDynamoDBTable_WriteCapacity_policy_document_9032D023\\"
          }
        }
      },
      \\"testDynamoDBTable_WriteCapacity_assume_role_policy_document_5A7EA325\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"application-autoscaling.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/WriteCapacity_assume_role_policy_document\\",
            \\"uniqueId\\": \\"testDynamoDBTable_WriteCapacity_assume_role_policy_document_5A7EA325\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders dynamo db table with read and write capacity and tags 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_dynamodb_table\\": {
      \\"testDynamoDBTable_dynamodb_table_A3DD49A4\\": {
        \\"hash_key\\": \\"123\\",
        \\"name\\": \\"abides-\\",
        \\"tags\\": {
          \\"name\\": \\"thedude\\",
          \\"hobby\\": \\"bowling\\"
        },
        \\"attribute\\": [
          {
            \\"name\\": \\"attribeautiful\\",
            \\"type\\": \\"shrugs!\\"
          }
        ],
        \\"global_secondary_index\\": [],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/dynamodb_table\\",
            \\"uniqueId\\": \\"testDynamoDBTable_dynamodb_table_A3DD49A4\\"
          }
        }
      }
    },
    \\"aws_iam_policy\\": {
      \\"testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649\\": {
        \\"name\\": \\"abides--ReadCapacity-AutoScalingPolicy\\",
        \\"policy\\": \\"\${data.aws_iam_policy_document.testDynamoDBTable_ReadCapacity_policy_document_EF789C68.json}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_autoscaling_policy\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649\\"
          }
        }
      },
      \\"testDynamoDBTable_WriteCapacity_autoscaling_policy_9632CE60\\": {
        \\"name\\": \\"abides--WriteCapacity-AutoScalingPolicy\\",
        \\"policy\\": \\"\${data.aws_iam_policy_document.testDynamoDBTable_WriteCapacity_policy_document_9032D023.json}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/WriteCapacity_autoscaling_policy\\",
            \\"uniqueId\\": \\"testDynamoDBTable_WriteCapacity_autoscaling_policy_9632CE60\\"
          }
        }
      }
    },
    \\"aws_iam_role\\": {
      \\"testDynamoDBTable_ReadCapacity_role_2B9645BB\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.testDynamoDBTable_ReadCapacity_assume_role_policy_document_54F698F0.json}\\",
        \\"name\\": \\"abides--ReadCapacity-AutoScalingRole\\",
        \\"tags\\": {
          \\"name\\": \\"thedude\\",
          \\"hobby\\": \\"bowling\\"
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_role\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_role_2B9645BB\\"
          }
        }
      },
      \\"testDynamoDBTable_WriteCapacity_role_4BB8E3F1\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.testDynamoDBTable_WriteCapacity_assume_role_policy_document_5A7EA325.json}\\",
        \\"name\\": \\"abides--WriteCapacity-AutoScalingRole\\",
        \\"tags\\": {
          \\"name\\": \\"thedude\\",
          \\"hobby\\": \\"bowling\\"
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/WriteCapacity_role\\",
            \\"uniqueId\\": \\"testDynamoDBTable_WriteCapacity_role_4BB8E3F1\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"testDynamoDBTable_ReadCapacity_role_attachment_3C0829C2\\": {
        \\"policy_arn\\": \\"\${aws_iam_policy.testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649.arn}\\",
        \\"role\\": \\"\${aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB.name}\\",
        \\"depends_on\\": [
          \\"aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB\\",
          \\"aws_iam_policy.testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_role_attachment\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_role_attachment_3C0829C2\\"
          }
        }
      },
      \\"testDynamoDBTable_WriteCapacity_role_attachment_8ABB9833\\": {
        \\"policy_arn\\": \\"\${aws_iam_policy.testDynamoDBTable_WriteCapacity_autoscaling_policy_9632CE60.arn}\\",
        \\"role\\": \\"\${aws_iam_role.testDynamoDBTable_WriteCapacity_role_4BB8E3F1.name}\\",
        \\"depends_on\\": [
          \\"aws_iam_role.testDynamoDBTable_WriteCapacity_role_4BB8E3F1\\",
          \\"aws_iam_policy.testDynamoDBTable_WriteCapacity_autoscaling_policy_9632CE60\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/WriteCapacity_role_attachment\\",
            \\"uniqueId\\": \\"testDynamoDBTable_WriteCapacity_role_attachment_8ABB9833\\"
          }
        }
      }
    },
    \\"aws_appautoscaling_target\\": {
      \\"testDynamoDBTable_ReadCapacity_table_target_CD047ED1\\": {
        \\"max_capacity\\": 10,
        \\"min_capacity\\": 3,
        \\"resource_id\\": \\"table/\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.name}\\",
        \\"role_arn\\": \\"\${aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB.arn}\\",
        \\"scalable_dimension\\": \\"dynamodb:table:ReadCapacityUnits\\",
        \\"service_namespace\\": \\"dynamodb\\",
        \\"depends_on\\": [
          \\"aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_table_target\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_table_target_CD047ED1\\"
          }
        }
      },
      \\"testDynamoDBTable_WriteCapacity_table_target_78393F1E\\": {
        \\"max_capacity\\": 10,
        \\"min_capacity\\": 3,
        \\"resource_id\\": \\"table/\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.name}\\",
        \\"role_arn\\": \\"\${aws_iam_role.testDynamoDBTable_WriteCapacity_role_4BB8E3F1.arn}\\",
        \\"scalable_dimension\\": \\"dynamodb:table:WriteCapacityUnits\\",
        \\"service_namespace\\": \\"dynamodb\\",
        \\"depends_on\\": [
          \\"aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/WriteCapacity_table_target\\",
            \\"uniqueId\\": \\"testDynamoDBTable_WriteCapacity_table_target_78393F1E\\"
          }
        }
      }
    },
    \\"aws_appautoscaling_policy\\": {
      \\"testDynamoDBTable_ReadCapacity_table_policy_40FF65C0\\": {
        \\"name\\": \\"DynamoDBReadCapacityUtilization:\${aws_appautoscaling_target.testDynamoDBTable_ReadCapacity_table_target_CD047ED1.resource_id}\\",
        \\"policy_type\\": \\"TargetTrackingScaling\\",
        \\"resource_id\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_ReadCapacity_table_target_CD047ED1.resource_id}\\",
        \\"scalable_dimension\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_ReadCapacity_table_target_CD047ED1.scalable_dimension}\\",
        \\"service_namespace\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_ReadCapacity_table_target_CD047ED1.service_namespace}\\",
        \\"target_tracking_scaling_policy_configuration\\": [
          {
            \\"target_value\\": 1,
            \\"predefined_metric_specification\\": [
              {
                \\"predefined_metric_type\\": \\"DynamoDBReadCapacityUtilization\\"
              }
            ]
          }
        ],
        \\"depends_on\\": [
          \\"aws_appautoscaling_target.testDynamoDBTable_ReadCapacity_table_target_CD047ED1\\",
          \\"aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_table_policy\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_table_policy_40FF65C0\\"
          }
        }
      },
      \\"testDynamoDBTable_WriteCapacity_table_policy_9BA11FD4\\": {
        \\"name\\": \\"DynamoDBWriteCapacityUtilization:\${aws_appautoscaling_target.testDynamoDBTable_WriteCapacity_table_target_78393F1E.resource_id}\\",
        \\"policy_type\\": \\"TargetTrackingScaling\\",
        \\"resource_id\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_WriteCapacity_table_target_78393F1E.resource_id}\\",
        \\"scalable_dimension\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_WriteCapacity_table_target_78393F1E.scalable_dimension}\\",
        \\"service_namespace\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_WriteCapacity_table_target_78393F1E.service_namespace}\\",
        \\"target_tracking_scaling_policy_configuration\\": [
          {
            \\"target_value\\": 1,
            \\"predefined_metric_specification\\": [
              {
                \\"predefined_metric_type\\": \\"DynamoDBWriteCapacityUtilization\\"
              }
            ]
          }
        ],
        \\"depends_on\\": [
          \\"aws_appautoscaling_target.testDynamoDBTable_WriteCapacity_table_target_78393F1E\\",
          \\"aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/WriteCapacity_table_policy\\",
            \\"uniqueId\\": \\"testDynamoDBTable_WriteCapacity_table_policy_9BA11FD4\\"
          }
        }
      }
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"testDynamoDBTable_ReadCapacity_policy_document_EF789C68\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"application-autoscaling:*\\",
              \\"cloudwatch:DescribeAlarms\\",
              \\"cloudwatch:PutMetricAlarm\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"*\\"
            ]
          },
          {
            \\"actions\\": [
              \\"dynamodb:DescribeTable\\",
              \\"dynamodb:UpdateTable\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}\\",
              \\"\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}*\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_policy_document\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_policy_document_EF789C68\\"
          }
        }
      },
      \\"testDynamoDBTable_ReadCapacity_assume_role_policy_document_54F698F0\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"application-autoscaling.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_assume_role_policy_document\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_assume_role_policy_document_54F698F0\\"
          }
        }
      },
      \\"testDynamoDBTable_WriteCapacity_policy_document_9032D023\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"application-autoscaling:*\\",
              \\"cloudwatch:DescribeAlarms\\",
              \\"cloudwatch:PutMetricAlarm\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"*\\"
            ]
          },
          {
            \\"actions\\": [
              \\"dynamodb:DescribeTable\\",
              \\"dynamodb:UpdateTable\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}\\",
              \\"\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}*\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/WriteCapacity_policy_document\\",
            \\"uniqueId\\": \\"testDynamoDBTable_WriteCapacity_policy_document_9032D023\\"
          }
        }
      },
      \\"testDynamoDBTable_WriteCapacity_assume_role_policy_document_5A7EA325\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"application-autoscaling.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/WriteCapacity_assume_role_policy_document\\",
            \\"uniqueId\\": \\"testDynamoDBTable_WriteCapacity_assume_role_policy_document_5A7EA325\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders dynamo db table with read capacity 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_dynamodb_table\\": {
      \\"testDynamoDBTable_dynamodb_table_A3DD49A4\\": {
        \\"hash_key\\": \\"123\\",
        \\"name\\": \\"abides-\\",
        \\"attribute\\": [
          {
            \\"name\\": \\"attribeautiful\\",
            \\"type\\": \\"shrugs!\\"
          }
        ],
        \\"global_secondary_index\\": [],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/dynamodb_table\\",
            \\"uniqueId\\": \\"testDynamoDBTable_dynamodb_table_A3DD49A4\\"
          }
        }
      }
    },
    \\"aws_iam_policy\\": {
      \\"testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649\\": {
        \\"name\\": \\"abides--ReadCapacity-AutoScalingPolicy\\",
        \\"policy\\": \\"\${data.aws_iam_policy_document.testDynamoDBTable_ReadCapacity_policy_document_EF789C68.json}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_autoscaling_policy\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649\\"
          }
        }
      }
    },
    \\"aws_iam_role\\": {
      \\"testDynamoDBTable_ReadCapacity_role_2B9645BB\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.testDynamoDBTable_ReadCapacity_assume_role_policy_document_54F698F0.json}\\",
        \\"name\\": \\"abides--ReadCapacity-AutoScalingRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_role\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_role_2B9645BB\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"testDynamoDBTable_ReadCapacity_role_attachment_3C0829C2\\": {
        \\"policy_arn\\": \\"\${aws_iam_policy.testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649.arn}\\",
        \\"role\\": \\"\${aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB.name}\\",
        \\"depends_on\\": [
          \\"aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB\\",
          \\"aws_iam_policy.testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_role_attachment\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_role_attachment_3C0829C2\\"
          }
        }
      }
    },
    \\"aws_appautoscaling_target\\": {
      \\"testDynamoDBTable_ReadCapacity_table_target_CD047ED1\\": {
        \\"max_capacity\\": 10,
        \\"min_capacity\\": 3,
        \\"resource_id\\": \\"table/\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.name}\\",
        \\"role_arn\\": \\"\${aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB.arn}\\",
        \\"scalable_dimension\\": \\"dynamodb:table:ReadCapacityUnits\\",
        \\"service_namespace\\": \\"dynamodb\\",
        \\"depends_on\\": [
          \\"aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_table_target\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_table_target_CD047ED1\\"
          }
        }
      }
    },
    \\"aws_appautoscaling_policy\\": {
      \\"testDynamoDBTable_ReadCapacity_table_policy_40FF65C0\\": {
        \\"name\\": \\"DynamoDBReadCapacityUtilization:\${aws_appautoscaling_target.testDynamoDBTable_ReadCapacity_table_target_CD047ED1.resource_id}\\",
        \\"policy_type\\": \\"TargetTrackingScaling\\",
        \\"resource_id\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_ReadCapacity_table_target_CD047ED1.resource_id}\\",
        \\"scalable_dimension\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_ReadCapacity_table_target_CD047ED1.scalable_dimension}\\",
        \\"service_namespace\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_ReadCapacity_table_target_CD047ED1.service_namespace}\\",
        \\"target_tracking_scaling_policy_configuration\\": [
          {
            \\"target_value\\": 1,
            \\"predefined_metric_specification\\": [
              {
                \\"predefined_metric_type\\": \\"DynamoDBReadCapacityUtilization\\"
              }
            ]
          }
        ],
        \\"depends_on\\": [
          \\"aws_appautoscaling_target.testDynamoDBTable_ReadCapacity_table_target_CD047ED1\\",
          \\"aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_table_policy\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_table_policy_40FF65C0\\"
          }
        }
      }
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"testDynamoDBTable_ReadCapacity_policy_document_EF789C68\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"application-autoscaling:*\\",
              \\"cloudwatch:DescribeAlarms\\",
              \\"cloudwatch:PutMetricAlarm\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"*\\"
            ]
          },
          {
            \\"actions\\": [
              \\"dynamodb:DescribeTable\\",
              \\"dynamodb:UpdateTable\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}\\",
              \\"\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}*\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_policy_document\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_policy_document_EF789C68\\"
          }
        }
      },
      \\"testDynamoDBTable_ReadCapacity_assume_role_policy_document_54F698F0\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"application-autoscaling.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_assume_role_policy_document\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_assume_role_policy_document_54F698F0\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders dynamo db table with write capacity 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_dynamodb_table\\": {
      \\"testDynamoDBTable_dynamodb_table_A3DD49A4\\": {
        \\"hash_key\\": \\"123\\",
        \\"name\\": \\"abides-\\",
        \\"attribute\\": [
          {
            \\"name\\": \\"attribeautiful\\",
            \\"type\\": \\"shrugs!\\"
          }
        ],
        \\"global_secondary_index\\": [],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/dynamodb_table\\",
            \\"uniqueId\\": \\"testDynamoDBTable_dynamodb_table_A3DD49A4\\"
          }
        }
      }
    },
    \\"aws_iam_policy\\": {
      \\"testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649\\": {
        \\"name\\": \\"abides--ReadCapacity-AutoScalingPolicy\\",
        \\"policy\\": \\"\${data.aws_iam_policy_document.testDynamoDBTable_ReadCapacity_policy_document_EF789C68.json}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_autoscaling_policy\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649\\"
          }
        }
      },
      \\"testDynamoDBTable_WriteCapacity_autoscaling_policy_9632CE60\\": {
        \\"name\\": \\"abides--WriteCapacity-AutoScalingPolicy\\",
        \\"policy\\": \\"\${data.aws_iam_policy_document.testDynamoDBTable_WriteCapacity_policy_document_9032D023.json}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/WriteCapacity_autoscaling_policy\\",
            \\"uniqueId\\": \\"testDynamoDBTable_WriteCapacity_autoscaling_policy_9632CE60\\"
          }
        }
      }
    },
    \\"aws_iam_role\\": {
      \\"testDynamoDBTable_ReadCapacity_role_2B9645BB\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.testDynamoDBTable_ReadCapacity_assume_role_policy_document_54F698F0.json}\\",
        \\"name\\": \\"abides--ReadCapacity-AutoScalingRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_role\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_role_2B9645BB\\"
          }
        }
      },
      \\"testDynamoDBTable_WriteCapacity_role_4BB8E3F1\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.testDynamoDBTable_WriteCapacity_assume_role_policy_document_5A7EA325.json}\\",
        \\"name\\": \\"abides--WriteCapacity-AutoScalingRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/WriteCapacity_role\\",
            \\"uniqueId\\": \\"testDynamoDBTable_WriteCapacity_role_4BB8E3F1\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"testDynamoDBTable_ReadCapacity_role_attachment_3C0829C2\\": {
        \\"policy_arn\\": \\"\${aws_iam_policy.testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649.arn}\\",
        \\"role\\": \\"\${aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB.name}\\",
        \\"depends_on\\": [
          \\"aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB\\",
          \\"aws_iam_policy.testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_role_attachment\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_role_attachment_3C0829C2\\"
          }
        }
      },
      \\"testDynamoDBTable_WriteCapacity_role_attachment_8ABB9833\\": {
        \\"policy_arn\\": \\"\${aws_iam_policy.testDynamoDBTable_WriteCapacity_autoscaling_policy_9632CE60.arn}\\",
        \\"role\\": \\"\${aws_iam_role.testDynamoDBTable_WriteCapacity_role_4BB8E3F1.name}\\",
        \\"depends_on\\": [
          \\"aws_iam_role.testDynamoDBTable_WriteCapacity_role_4BB8E3F1\\",
          \\"aws_iam_policy.testDynamoDBTable_WriteCapacity_autoscaling_policy_9632CE60\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/WriteCapacity_role_attachment\\",
            \\"uniqueId\\": \\"testDynamoDBTable_WriteCapacity_role_attachment_8ABB9833\\"
          }
        }
      }
    },
    \\"aws_appautoscaling_target\\": {
      \\"testDynamoDBTable_ReadCapacity_table_target_CD047ED1\\": {
        \\"max_capacity\\": 10,
        \\"min_capacity\\": 3,
        \\"resource_id\\": \\"table/\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.name}\\",
        \\"role_arn\\": \\"\${aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB.arn}\\",
        \\"scalable_dimension\\": \\"dynamodb:table:ReadCapacityUnits\\",
        \\"service_namespace\\": \\"dynamodb\\",
        \\"depends_on\\": [
          \\"aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_table_target\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_table_target_CD047ED1\\"
          }
        }
      },
      \\"testDynamoDBTable_WriteCapacity_table_target_78393F1E\\": {
        \\"max_capacity\\": 10,
        \\"min_capacity\\": 3,
        \\"resource_id\\": \\"table/\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.name}\\",
        \\"role_arn\\": \\"\${aws_iam_role.testDynamoDBTable_WriteCapacity_role_4BB8E3F1.arn}\\",
        \\"scalable_dimension\\": \\"dynamodb:table:WriteCapacityUnits\\",
        \\"service_namespace\\": \\"dynamodb\\",
        \\"depends_on\\": [
          \\"aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/WriteCapacity_table_target\\",
            \\"uniqueId\\": \\"testDynamoDBTable_WriteCapacity_table_target_78393F1E\\"
          }
        }
      }
    },
    \\"aws_appautoscaling_policy\\": {
      \\"testDynamoDBTable_ReadCapacity_table_policy_40FF65C0\\": {
        \\"name\\": \\"DynamoDBReadCapacityUtilization:\${aws_appautoscaling_target.testDynamoDBTable_ReadCapacity_table_target_CD047ED1.resource_id}\\",
        \\"policy_type\\": \\"TargetTrackingScaling\\",
        \\"resource_id\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_ReadCapacity_table_target_CD047ED1.resource_id}\\",
        \\"scalable_dimension\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_ReadCapacity_table_target_CD047ED1.scalable_dimension}\\",
        \\"service_namespace\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_ReadCapacity_table_target_CD047ED1.service_namespace}\\",
        \\"target_tracking_scaling_policy_configuration\\": [
          {
            \\"target_value\\": 1,
            \\"predefined_metric_specification\\": [
              {
                \\"predefined_metric_type\\": \\"DynamoDBReadCapacityUtilization\\"
              }
            ]
          }
        ],
        \\"depends_on\\": [
          \\"aws_appautoscaling_target.testDynamoDBTable_ReadCapacity_table_target_CD047ED1\\",
          \\"aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_table_policy\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_table_policy_40FF65C0\\"
          }
        }
      },
      \\"testDynamoDBTable_WriteCapacity_table_policy_9BA11FD4\\": {
        \\"name\\": \\"DynamoDBWriteCapacityUtilization:\${aws_appautoscaling_target.testDynamoDBTable_WriteCapacity_table_target_78393F1E.resource_id}\\",
        \\"policy_type\\": \\"TargetTrackingScaling\\",
        \\"resource_id\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_WriteCapacity_table_target_78393F1E.resource_id}\\",
        \\"scalable_dimension\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_WriteCapacity_table_target_78393F1E.scalable_dimension}\\",
        \\"service_namespace\\": \\"\${aws_appautoscaling_target.testDynamoDBTable_WriteCapacity_table_target_78393F1E.service_namespace}\\",
        \\"target_tracking_scaling_policy_configuration\\": [
          {
            \\"target_value\\": 1,
            \\"predefined_metric_specification\\": [
              {
                \\"predefined_metric_type\\": \\"DynamoDBWriteCapacityUtilization\\"
              }
            ]
          }
        ],
        \\"depends_on\\": [
          \\"aws_appautoscaling_target.testDynamoDBTable_WriteCapacity_table_target_78393F1E\\",
          \\"aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/WriteCapacity_table_policy\\",
            \\"uniqueId\\": \\"testDynamoDBTable_WriteCapacity_table_policy_9BA11FD4\\"
          }
        }
      }
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"testDynamoDBTable_ReadCapacity_policy_document_EF789C68\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"application-autoscaling:*\\",
              \\"cloudwatch:DescribeAlarms\\",
              \\"cloudwatch:PutMetricAlarm\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"*\\"
            ]
          },
          {
            \\"actions\\": [
              \\"dynamodb:DescribeTable\\",
              \\"dynamodb:UpdateTable\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}\\",
              \\"\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}*\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_policy_document\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_policy_document_EF789C68\\"
          }
        }
      },
      \\"testDynamoDBTable_ReadCapacity_assume_role_policy_document_54F698F0\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"application-autoscaling.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/ReadCapacity_assume_role_policy_document\\",
            \\"uniqueId\\": \\"testDynamoDBTable_ReadCapacity_assume_role_policy_document_54F698F0\\"
          }
        }
      },
      \\"testDynamoDBTable_WriteCapacity_policy_document_9032D023\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"application-autoscaling:*\\",
              \\"cloudwatch:DescribeAlarms\\",
              \\"cloudwatch:PutMetricAlarm\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"*\\"
            ]
          },
          {
            \\"actions\\": [
              \\"dynamodb:DescribeTable\\",
              \\"dynamodb:UpdateTable\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}\\",
              \\"\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}*\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/WriteCapacity_policy_document\\",
            \\"uniqueId\\": \\"testDynamoDBTable_WriteCapacity_policy_document_9032D023\\"
          }
        }
      },
      \\"testDynamoDBTable_WriteCapacity_assume_role_policy_document_5A7EA325\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"application-autoscaling.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDynamoDBTable/WriteCapacity_assume_role_policy_document\\",
            \\"uniqueId\\": \\"testDynamoDBTable_WriteCapacity_assume_role_policy_document_5A7EA325\\"
          }
        }
      }
    }
  }
}"
`;
